tekton/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: tekton-dashboard
 namespace: tekton-pipelines
 annotations:
  nginx.ingress.kubernetes.io/ingress.class: "nginx"
  #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  ingressClassName: "nginx"
  nginx.org/proxy-connect-timeout: "30s"
  nginx.org/proxy-read-timeout: "40s"
  nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  rules:
  - host: tekton.kubernetes.cn
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
